[project]
name = "rename-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
]
